--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 
       body {
         max-width: 600px;
+        padding-left: 20px;
+        padding-right: 20px;
         margin: 80px auto;
       }
 
