feat: release status

--- a/src/index.html
+++ b/src/index.html
@@ -29,5 +29,6 @@
     <p>Github Actions Status:</p>
     <img src="https://github.com/Nazarhanov/Test/workflows/Echo/badge.svg" alt="Echo workflow status" />
     <img src="https://github.com/Nazarhanov/Test/workflows/Deploy/badge.svg" alt="Deploy workflow status" />
+    <img src="https://github.com/Nazarhanov/Test/workflows/Release/badge.svg" alt="Release workflow status" />
   </body>
 </html>
